--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HotelListingDbConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HotelListingDB;TrustedConnection=true;MultipleActiveResultSets=true;Encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
